# wildcard

./: .taplo.toml  Cargo.toml  README.md  release-notes.md
.github/workflows/: ci.yml
benches/: benchmark.rs
benches/benchdata/: benchmarks_1k.toml  benchmarks_2k.toml  benchmarks_4k.toml  benchmarks_8k.toml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_captures.rs  fuzz_captures_equivalent_to_regex.rs  fuzz_is_match.rs  fuzz_is_match_equivalent_to_regex.rs
fuzz/src/: lib.rs
src/: lib.rs
testdata/: capture.toml  matching.toml
tools/: check.sh  codecov.sh  release.sh
